modificaciones y test loaderDinamico